sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/Opportunity_Item__c.object-meta.xml
<CustomObject>
    <label>Opportunity Item</label>
    <nameField>
        <label>Opportunity Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>