sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Add_Item_Linearly__c.field-meta.xml
<CustomField>
    <fullName>Add_Item_Linearly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add this item linearly based on no. of approved toilets/upstructure</description>
    <inlineHelpText>Add this item linearly based on no. of approved toilets/upstructure</inlineHelpText>
    <label>Add Item Linearly</label>
    <type>Checkbox</type>
</CustomField>