sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Deactivate_Item__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to deactivate an item</description>
    <inlineHelpText>Check this box to deactivate an item</inlineHelpText>
    <label>Deactivate Item</label>
    <type>Checkbox</type>
</CustomField>