sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Quantity</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>