sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Franchise_Type__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Type__c</fullName>
    <label>Franchise Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>