sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Structure Package</fullName>
            </value>
            <value>
                <fullName>Paint Package</fullName>
            </value>
            <value>
                <fullName>Toilet Support Package</fullName>
            </value>
            <value>
                <fullName>Location Support Package</fullName>
            </value>
            <value>
                <fullName>Upstructure Package</fullName>
            </value>
            <value>
                <fullName>Pit Conversion Package</fullName>
            </value>
            <value>
                <fullName>Basic FLT Package</fullName>
            </value>
            <value>
                <fullName>Basic FLT Package - Upstructure</fullName>
            </value>
            <value>
                <fullName>BIB Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>