sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Hybrid__c.field-meta.xml
<CustomField>
    <fullName>Hybrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Items used in hybrid toilet</description>
    <label>Hybrid</label>
    <type>Checkbox</type>
</CustomField>