sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>rstk__icitem__c</referenceTo>
    <relationshipLabel>Opportunity Items</relationshipLabel>
    <relationshipName>Opportunity_Items</relationshipName>
    <type>Lookup</type>
</CustomField>