sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/InventoryItem__c.field-meta.xml
<CustomField>
    <fullName>InventoryItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Opportunity Items</relationshipLabel>
    <relationshipName>Opportunity_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>