sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Manual_Add__c.field-meta.xml
<CustomField>
    <fullName>Manual_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Items with this value need to be added manually</description>
    <label>Manual Add</label>
    <type>Checkbox</type>
</CustomField>