sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Secondary_Toilet__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Toilet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Toilet</label>
    <type>Checkbox</type>
</CustomField>