sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Shared_Item__c.field-meta.xml
<CustomField>
    <fullName>Shared_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this item is shared e.g. shared between Basic FLT Package &amp; Basic FLT Package - Upstructure</description>
    <inlineHelpText>Check this box if this item is shared e.g. shared between Basic FLT Package &amp; Basic FLT Package - Upstructure</inlineHelpText>
    <label>Shared Item</label>
    <type>Checkbox</type>
</CustomField>