sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/fields/Structure_Version__c.field-meta.xml
<CustomField>
    <fullName>Structure_Version__c</fullName>
    <label>Structure Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V2</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
            <value>
                <fullName>V2-V3 Hybrid</fullName>
            </value>
            <value>
                <fullName>Pit Conversion</fullName>
            </value>
            <value>
                <fullName>Basic FLT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>