sfSandBoxCode/force-app/main/default/objects/Opportunity_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grouping__c</columns>
    <columns>Description__c</columns>
    <columns>Inventory_Item__c</columns>
    <columns>Structure_Version__c</columns>
    <columns>Hybrid__c</columns>
    <columns>Default_Quantity__c</columns>
    <columns>UOM__c</columns>
    <columns>Franchise_Type__c</columns>
    <columns>Secondary_Toilet__c</columns>
    <columns>Manual_Add__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>